broke ens energy calc into private fcns; new tests

--- a/example/develop-tests.ipynb
+++ b/example/develop-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "id": "17955206-8781-4270-a8bc-4af464740986",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "                observable=False,\n",
     "                mu_stoich={\"X\":2})\n",
     "\n",
-    "mu_dict = {\"X\":[0,3.333]}\n",
+    "mu_dict = {\"X\":[0,3.333,1]}\n",
     "\n",
     "ddg_df = pd.DataFrame({\"site\":[1,1],\n",
     "                       \"mut\":[\"A1V\",\"A1P\"],\n",
@@ -38,7 +38,7 @@
     "\n",
     "fc = FitnessContainer(ens,\n",
     "                      mu_dict,\n",
-    "                      [ff_on,ff_off],\n",
+    "                      [ff_on,ff_off,ff_on],\n",
     "                      select_on=\"fx_obs\",\n",
     "                      fitness_kwargs={},\n",
     "                      T=1)\n",
@@ -49,94 +49,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "eb3f4668-21b6-44e6-9dca-5c30501b80d1",
+   "execution_count": 7,
+   "id": "90a5bc6e-6495-4467-9073-16e4c0f22944",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T</th>\n",
-       "      <th>X</th>\n",
-       "      <th>s1</th>\n",
-       "      <th>s2</th>\n",
-       "      <th>fx_obs</th>\n",
-       "      <th>dG_obs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.541653</td>\n",
-       "      <td>0.458347</td>\n",
-       "      <td>0.541653</td>\n",
-       "      <td>-0.167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.333</td>\n",
-       "      <td>0.001503</td>\n",
-       "      <td>0.998497</td>\n",
-       "      <td>0.001503</td>\n",
-       "      <td>6.499</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     T      X        s1        s2    fx_obs  dG_obs\n",
-       "0  1.0  0.000  0.541653  0.458347  0.541653  -0.167\n",
-       "1  1.0  3.333  0.001503  0.998497  0.001503   6.499"
+       "'a'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "X = {\"a\":1,\"b\":2}\n",
+    "\n",
+    "next(iter(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "aaeedb51-9076-42b3-95c4-f546035c8e2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ens._species[\"s1\"][\"mu_stoich\"] = {\"X\":0}\n",
+    "\n",
+    "z_matrix = np.zeros((len(ens.species),len(mu_dict[ens.mu_list[0]])),dtype=float)\n",
+    "obs_mask = np.zeros(len(ens.species),dtype=bool)\n",
+    "\n",
+    "first_key = ens.mu_list[0]\n",
+    "for i, name in enumerate(ens._species):\n",
+    "    z_matrix[i,:] = ens._species[name][\"dG0\"]\n",
+    "    \n",
+    "    mu_stoich = ens._species[name][\"mu_stoich\"]\n",
+    "    for j in range(len(mu_dict[ens.mu_list[0]])):\n",
+    "        for mu in ens.mu_list:\n",
+    "            z_matrix[i,j] += mu_dict[mu][j]*mu_stoich[mu]\n",
+    "\n",
+    "    obs_mask[i] = ens._species[name][\"observable\"]\n",
+    "\n",
+    "not_obs_mask = np.logical_not(obs_mask)\n",
+    "\n",
+    "#max_allowed = np.log(np.finfo('d').max)*0.9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "74f80f47-dec0-4d80-bde6-1840934e25fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.49441076, 0.5       , 0.49608762]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "beta = 1/(ens._R*298.15)\n",
+    "\n",
+    "mut_energy = np.array([1,2])\n",
+    "\n",
+    "weights = (z_matrix + mut_energy[:,None])*beta\n",
+    "shift = max_allowed - np.max(weights,axis=1)\n",
+    "weights = weights + shift[:,None]\n",
+    "weights = np.exp(weights)\n",
+    "\n",
+    "obs = weights[obs_mask,:]\n",
+    "not_obs = weights[not_obs_mask,:]\n",
+    "\n",
+    "not_obs/(not_obs + obs)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a23b8887-195a-4823-9c0a-00e275637034",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "first_key = iter(next(self._stored_mu))\n",
+    "for i, name in enumerate(self.species):\n",
+    "    mu_stoich = self.species[name][\"mu_stoich\"]\n",
+    "    self._mu_matrix[i,:] = self.species[name][\"dG0\"]\n",
+    "    for j in range(len(self._stored_mu[first_key])):\n",
+    "        for mu in self._stored_mu:\n",
+    "            self._mu_matrix[i,j] += self._stored_mu[mu][j]*mu_stoich[mu]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9692040-0211-4629-a34d-ca071390fdac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "035149ea-0f76-46e0-9dcf-c316c7d30a29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb3f4668-21b6-44e6-9dca-5c30501b80d1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ens.get_obs(mut_energy={},mu_dict=mu_dict,T=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "60de088f-6216-4033-bbf6-711d817f8d9f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.54165324, 0.99849732])"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "eee.evolve.fitness._fitness_function(ens=ens,\n",
     "                                     mut_energy={},\n",
@@ -149,80 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "aaa7c173-66b7-4cf0-990f-1d65deefd9e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5416532393676118 0.9984973180670926\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T</th>\n",
-       "      <th>X</th>\n",
-       "      <th>s1</th>\n",
-       "      <th>s2</th>\n",
-       "      <th>fx_obs</th>\n",
-       "      <th>dG_obs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.541653</td>\n",
-       "      <td>0.458347</td>\n",
-       "      <td>0.541653</td>\n",
-       "      <td>-0.167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.333</td>\n",
-       "      <td>0.001503</td>\n",
-       "      <td>0.998497</td>\n",
-       "      <td>0.001503</td>\n",
-       "      <td>6.499</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     T      X        s1        s2    fx_obs  dG_obs\n",
-       "0  1.0  0.000  0.541653  0.458347  0.541653  -0.167\n",
-       "1  1.0  3.333  0.001503  0.998497  0.001503   6.499"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "df = ens.get_obs(mu_dict=mu_dict,\n",
@@ -234,80 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "f369be1c-d609-40a0-b85c-40a2bbd95480",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9943867704232219 0.8159281306107955\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T</th>\n",
-       "      <th>X</th>\n",
-       "      <th>s1</th>\n",
-       "      <th>s2</th>\n",
-       "      <th>fx_obs</th>\n",
-       "      <th>dG_obs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.994387</td>\n",
-       "      <td>0.005613</td>\n",
-       "      <td>0.994387</td>\n",
-       "      <td>-5.177</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.333</td>\n",
-       "      <td>0.184072</td>\n",
-       "      <td>0.815928</td>\n",
-       "      <td>0.184072</td>\n",
-       "      <td>1.489</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     T      X        s1        s2    fx_obs  dG_obs\n",
-       "0  1.0  0.000  0.994387  0.005613  0.994387  -5.177\n",
-       "1  1.0  3.333  0.184072  0.815928  0.184072   1.489"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = ens.get_obs(mu_dict=mu_dict,\n",
     "                 mut_energy={\"s1\":-1.677,\"s2\":3.333},\n",
@@ -319,80 +225,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "7f4c3f06-027c-4984-94c8-b5c2b7bb4a3f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.775822590594909e-08 0.999999999926446\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T</th>\n",
-       "      <th>X</th>\n",
-       "      <th>s1</th>\n",
-       "      <th>s2</th>\n",
-       "      <th>fx_obs</th>\n",
-       "      <th>dG_obs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>5.775823e-08</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.775823e-08</td>\n",
-       "      <td>16.667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.333</td>\n",
-       "      <td>7.355409e-11</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>7.355409e-11</td>\n",
-       "      <td>23.333</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     T      X            s1   s2        fx_obs  dG_obs\n",
-       "0  1.0  0.000  5.775823e-08  1.0  5.775823e-08  16.667\n",
-       "1  1.0  3.333  7.355409e-11  1.0  7.355409e-11  23.333"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = ens.get_obs(mu_dict=mu_dict,\n",
     "                 mut_energy={\"s1\":0.167,\"s2\":-16.667},\n",
@@ -404,20 +240,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "a9a430ab-359d-49c9-ba5b-dd0bf450a18b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5408393068309133\n",
-      "0.928795407551965\n",
-      "5.7758225901700734e-08\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(fc.fitness({}))\n",
     "print(fc.fitness({\"s1\":-0.167,\"s2\":3.333}))\n",
@@ -426,25 +252,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "eff73d57-c882-4cba-a2e4-08baf00e5a85",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "662f9d0d9d1b422ba93389427b22bfa1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/999 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gc, generations = wright_fisher(gc=gc,\n",
     "                                mutation_rate=0.001,\n",
@@ -454,18 +265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "d2109160-bab4-49ba-8197-ce481bea6351",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'': 173565, 'A1V': 9821432, 'A1P': 5003}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "genotypes = {}\n",
@@ -484,41 +287,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "bd156870-8051-4302-bf8b-195aba0e4446",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9900628059481937"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "9821432"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "06f04870-27db-4e42-8546-d00ef26f9277",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.84213\n",
-      "0.15733\n",
-      "0.00054\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(84213/100000)\n",
     "print(15733/100000)\n",
@@ -527,21 +309,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "8ee6feff-ddb6-43bd-b199-6eebc384533c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0031964"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "31964/10000000"
    ]
@@ -552,7 +323,47 @@
    "id": "b85d5e09-3c19-4647-b901-b50a00ab8aa7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65d2b0e0-84fe-495f-8f95-ca3a9b288a02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Four condition for two ligands\n",
+    "conditions = np.array([[1,2]])\n",
+    "\n",
+    "# Stoich for three species and two ligands\n",
+    "stoich = np.array([[1,2,3],\n",
+    "                   [4,5,6]])\n",
+    "\n",
+    "conditions.T*stoich\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ef05a5e-0244-427b-8279-9e1ecc5dfcdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dG0 = np.array([0,0,0])\n",
+    "\n",
+    "stoich = np.array([[1,0,0],\n",
+    "                   [0,1,0]])\n",
+    "\n",
+    "\n",
+    "dGmut = np.array([0,0,0])\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
