added fast energy calc to ensemble

--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -285,7 +285,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3646fda95ab84eeca5f7c5e8ab5aad36",
+       "model_id": "8020b78a62e047af8db8b0c7ca6277aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,7 +303,7 @@
       "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:219: UserWarning: \n",
       "\n",
       "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 5 of 7 requested.\n",
+      "generations. Accumulated 3 of 4 requested.\n",
       "Try increasing num_generations and/or mutation_rate.\n",
       "\n",
       "\n",
@@ -311,7 +311,15 @@
       "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:219: UserWarning: \n",
       "\n",
       "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 5 of 6 requested.\n",
+      "generations. Accumulated 3 of 5 requested.\n",
+      "Try increasing num_generations and/or mutation_rate.\n",
+      "\n",
+      "\n",
+      "  warnings.warn(w)\n",
+      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:219: UserWarning: \n",
+      "\n",
+      "Did not accumulate requested number of mutations after 1000\n",
+      "generations. Accumulated 3 of 6 requested.\n",
       "Try increasing num_generations and/or mutation_rate.\n",
       "\n",
       "\n",
@@ -345,13 +353,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anc0 LCCG\n",
-      "anc1 DCAK\n",
-      "anc2 DCCG\n",
-      "A DCAK\n",
-      "B DCAK\n",
-      "C DCCK\n",
-      "D DDCK\n"
+      "anc0 MLRG\n",
+      "anc1 KLRG\n",
+      "anc2 MLRK\n",
+      "A KLRG\n",
+      "B KLRG\n",
+      "C MLRK\n",
+      "D MLRK\n"
      ]
     }
    ],
