updated faster simulation energy calc

--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "8e11b788-2d0f-4432-b912-9b08c72f2dfc",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "3e0f2ad3-4416-4b35-b84a-7d0f85e940c8",
    "metadata": {
     "tags": []
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "73931919-f875-40fb-ae30-5e0cafbc296c",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "[76 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "83448fb5-1fc7-4041-a58d-074d3f172abe",
    "metadata": {},
    "outputs": [
@@ -278,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "e0765ec5-6894-4945-84c1-e21fd2c4bbd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8020b78a62e047af8db8b0c7ca6277aa",
+       "model_id": "8fdebada169047ceae48c3edc042f84f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,7 +303,7 @@
       "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:219: UserWarning: \n",
       "\n",
       "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 3 of 4 requested.\n",
+      "generations. Accumulated 2 of 4 requested.\n",
       "Try increasing num_generations and/or mutation_rate.\n",
       "\n",
       "\n",
@@ -311,7 +311,7 @@
       "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:219: UserWarning: \n",
       "\n",
       "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 3 of 5 requested.\n",
+      "generations. Accumulated 2 of 3 requested.\n",
       "Try increasing num_generations and/or mutation_rate.\n",
       "\n",
       "\n",
@@ -319,7 +319,7 @@
       "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:219: UserWarning: \n",
       "\n",
       "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 3 of 6 requested.\n",
+      "generations. Accumulated 2 of 5 requested.\n",
       "Try increasing num_generations and/or mutation_rate.\n",
       "\n",
       "\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "2f3fd7bb-6f47-420b-b131-020211fd6636",
    "metadata": {},
    "outputs": [
@@ -353,13 +353,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anc0 MLRG\n",
-      "anc1 KLRG\n",
-      "anc2 MLRK\n",
-      "A KLRG\n",
-      "B KLRG\n",
-      "C MLRK\n",
-      "D MLRK\n"
+      "anc0 LVQG\n",
+      "anc1 LVQG\n",
+      "anc2 LVQG\n",
+      "A LVQG\n",
+      "B LVQG\n",
+      "C LVQG\n",
+      "D LVQG\n"
      ]
     }
    ],
