--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -285,7 +285,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8dd5524216e40de9485edf2252bcfe0",
+       "model_id": "26a2757971044e7c96a26362a72bde26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,10 +300,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:219: UserWarning: \n",
+      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:285: UserWarning: \n",
       "\n",
       "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 3 of 5 requested.\n",
+      "generations. Accumulated 2 of 4 requested.\n",
+      "Try increasing num_generations and/or mutation_rate.\n",
+      "\n",
+      "\n",
+      "  warnings.warn(w)\n",
+      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:285: UserWarning: \n",
+      "\n",
+      "Did not accumulate requested number of mutations after 1000\n",
+      "generations. Accumulated 2 of 3 requested.\n",
+      "Try increasing num_generations and/or mutation_rate.\n",
+      "\n",
+      "\n",
+      "  warnings.warn(w)\n",
+      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:285: UserWarning: \n",
+      "\n",
+      "Did not accumulate requested number of mutations after 1000\n",
+      "generations. Accumulated 2 of 5 requested.\n",
       "Try increasing num_generations and/or mutation_rate.\n",
       "\n",
       "\n",
@@ -337,12 +353,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anc0 LLRG\n",
+      "anc0 KLRG\n",
       "anc1 KLRG\n",
-      "anc2 NLRG\n",
+      "anc2 KLRG\n",
       "A KLRG\n",
       "B KLRG\n",
-      "C HLRG\n",
+      "C KLRG\n",
       "D KLRG\n"
      ]
     }
@@ -355,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "955dd76a-1f78-4065-b115-922bb71a6b6b",
    "metadata": {},
    "outputs": [],
@@ -367,21 +383,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "49bc3b89-0eeb-42e6-965d-0adaf158c8fa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Tree node 'anc0' (0x28e5d285)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('yo.pickle','rb') as f:\n",
     "    x = pickle.load(f)\n",
@@ -390,169 +395,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "9b72be5e-7ffd-4fdc-af25-43f018e6133d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dist', 'generations', 'name', 'support'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x.features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "80c2280a-3355-405f-bf06-6e98ff563605",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{0: 1000},\n",
-       " {0: 995, 1: 1, 2: 1, 3: 1, 4: 1, 5: 1},\n",
-       " {0: 987,\n",
-       "  1: 1,\n",
-       "  2: 1,\n",
-       "  6: 1,\n",
-       "  7: 1,\n",
-       "  8: 1,\n",
-       "  9: 1,\n",
-       "  10: 1,\n",
-       "  11: 1,\n",
-       "  12: 1,\n",
-       "  13: 1,\n",
-       "  14: 1,\n",
-       "  15: 1,\n",
-       "  16: 1},\n",
-       " {0: 986,\n",
-       "  1: 1,\n",
-       "  6: 2,\n",
-       "  10: 1,\n",
-       "  17: 1,\n",
-       "  18: 1,\n",
-       "  19: 1,\n",
-       "  20: 1,\n",
-       "  21: 1,\n",
-       "  22: 1,\n",
-       "  23: 1,\n",
-       "  24: 1,\n",
-       "  25: 1,\n",
-       "  26: 1},\n",
-       " {0: 982,\n",
-       "  6: 2,\n",
-       "  17: 6,\n",
-       "  18: 1,\n",
-       "  23: 2,\n",
-       "  26: 1,\n",
-       "  27: 1,\n",
-       "  28: 1,\n",
-       "  29: 1,\n",
-       "  30: 1,\n",
-       "  31: 1,\n",
-       "  32: 1},\n",
-       " {0: 938,\n",
-       "  6: 1,\n",
-       "  17: 42,\n",
-       "  23: 6,\n",
-       "  30: 3,\n",
-       "  33: 1,\n",
-       "  34: 1,\n",
-       "  35: 1,\n",
-       "  36: 1,\n",
-       "  37: 1,\n",
-       "  38: 1,\n",
-       "  39: 1,\n",
-       "  40: 1,\n",
-       "  41: 1,\n",
-       "  42: 1},\n",
-       " {0: 726,\n",
-       "  17: 214,\n",
-       "  23: 19,\n",
-       "  30: 11,\n",
-       "  33: 1,\n",
-       "  35: 7,\n",
-       "  36: 2,\n",
-       "  37: 1,\n",
-       "  39: 8,\n",
-       "  40: 1,\n",
-       "  41: 2,\n",
-       "  43: 1,\n",
-       "  44: 1,\n",
-       "  45: 1,\n",
-       "  46: 1,\n",
-       "  47: 1,\n",
-       "  48: 1,\n",
-       "  49: 1,\n",
-       "  50: 1},\n",
-       " {0: 173,\n",
-       "  17: 370,\n",
-       "  23: 15,\n",
-       "  30: 11,\n",
-       "  35: 16,\n",
-       "  39: 9,\n",
-       "  43: 208,\n",
-       "  44: 2,\n",
-       "  49: 187,\n",
-       "  51: 1,\n",
-       "  52: 1,\n",
-       "  53: 1,\n",
-       "  54: 1,\n",
-       "  55: 1,\n",
-       "  56: 1,\n",
-       "  57: 1,\n",
-       "  58: 1,\n",
-       "  59: 1},\n",
-       " {0: 2,\n",
-       "  17: 5,\n",
-       "  23: 1,\n",
-       "  35: 1,\n",
-       "  39: 1,\n",
-       "  43: 486,\n",
-       "  49: 492,\n",
-       "  54: 1,\n",
-       "  60: 1,\n",
-       "  61: 1,\n",
-       "  62: 1,\n",
-       "  63: 1,\n",
-       "  64: 1,\n",
-       "  65: 1,\n",
-       "  66: 1,\n",
-       "  67: 1,\n",
-       "  68: 1,\n",
-       "  69: 1,\n",
-       "  70: 1},\n",
-       " {43: 486,\n",
-       "  49: 501,\n",
-       "  71: 1,\n",
-       "  72: 1,\n",
-       "  73: 1,\n",
-       "  74: 1,\n",
-       "  75: 1,\n",
-       "  76: 1,\n",
-       "  77: 1,\n",
-       "  78: 1,\n",
-       "  79: 1,\n",
-       "  80: 1,\n",
-       "  81: 1,\n",
-       "  82: 1,\n",
-       "  83: 1}]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x.generations"
    ]
