--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -285,7 +285,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26a2757971044e7c96a26362a72bde26",
+       "model_id": "dc0c46c8c42f432388574ac0e02cd64d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,26 +300,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:285: UserWarning: \n",
+      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:303: UserWarning: \n",
       "\n",
       "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 2 of 4 requested.\n",
-      "Try increasing num_generations and/or mutation_rate.\n",
-      "\n",
-      "\n",
-      "  warnings.warn(w)\n",
-      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:285: UserWarning: \n",
-      "\n",
-      "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 2 of 3 requested.\n",
-      "Try increasing num_generations and/or mutation_rate.\n",
-      "\n",
-      "\n",
-      "  warnings.warn(w)\n",
-      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:285: UserWarning: \n",
-      "\n",
-      "Did not accumulate requested number of mutations after 1000\n",
-      "generations. Accumulated 2 of 5 requested.\n",
+      "generations. Accumulated 3 of 5 requested.\n",
       "Try increasing num_generations and/or mutation_rate.\n",
       "\n",
       "\n",
@@ -353,9 +337,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anc0 KLRG\n",
+      "anc0 LLRG\n",
       "anc1 KLRG\n",
-      "anc2 KLRG\n",
+      "anc2 HLRG\n",
       "A KLRG\n",
       "B KLRG\n",
       "C KLRG\n",
